--- a/jxfy.html
+++ b/jxfy.html
@@ -30,11 +30,8 @@
 					<li class="shuxinshux" onclick="siaxuansy()">筛选<span class="mui-icon mui-icon-arrowdown jxfyzxtubiao"></span></li>
 				</ul>
 			</div>
-			
-		    
 		</div>
-		
-		
+
 		<script type="text/javascript">
 			mui.init({
 			    subpages:[{
@@ -89,7 +86,7 @@
 			var area = 1;
 			var wz = 1;//位置
 			var sx = 1;//筛选
-			
+			console.log(45645645645645465456172);
 			/*筛选点击事件*/
 			function siaxuansy(){
 				chushiweizhi2();
