修改首页bug周2018-3-21 16:48合并

--- a/wd.html
+++ b/wd.html
@@ -20,8 +20,8 @@
 		    		<img src="img/head_img.png"/>
 		    	</p>
 		    	<p class="user_news" id="login">
-					<span class="ljdl">立即登陆</span>
-					<span class="dlcz">登陆后可进行更多操作</span>
+					<span class="ljdl">立即登录</span>
+					<span class="dlcz">登录后可进行更多操作</span>
 					<span class="wrz" style="display: none;">未认证</span>
 					<span class="yrz" style="display: none;">已认证</span>
 		    	</p>
@@ -165,7 +165,7 @@
 				if(JSON.parse(localStorage.getItem('cookxs_yh'))){
 					gainUser();
 				}else{
-					$('.ljdl').html('立即登陆');
+					$('.ljdl').html('立即登录');
 					$('.dlcz').css('display','block');
 					$('.wrz').css('display','none');
 					$('.yrz').css('display','none');
