--- a/sy.html
+++ b/sy.html
@@ -146,7 +146,7 @@
 					    </div>
 					    <div class="btn_box">
 					    	<div class="hqyzm" onclick="huoqvyanzm()">获取验证码</div>
-						    <button type="button" onclick="tijiao()" class="mui-btn mui-btn-primary mui-btn-outlined btn"disabled="disabled" id="tijiao">立即委托</button>
+						    <button type="button" onclick="tijiao()" class="mui-btn mui-btn-primary mui-btn-outlined btn"disabled="disabled" id="tijiaobtn">立即委托</button>
 					    </div>
 					</form>
 					
@@ -435,9 +435,9 @@
 				var phone = $('.yzwtPhone').val();
 				if(phone!=""&&code!="")
 				{
-					$('#tijiao').attr("disabled",false);  
+					$('#tijiaobtn').attr("disabled",false);  
 				}else{
-					$('#tijiao').attr("disabled",true);  
+					$('#tijiaobtn').attr("disabled",true);  
 				}
 			}
 			
@@ -490,6 +490,7 @@
 					mui.alert("手机号或验证码为空");
 					return false;
 				}
+				
 				mui.ajax(url+'/yskjApp/appYskj/V1/compServiceCode.do',{
 					data:{
 						'code':code,
