--- a/sy.html
+++ b/sy.html
@@ -139,7 +139,7 @@
 					<p class="yzwt_tip">请留下您的联系方式，我们会及时与您联系，为您提供专属服务</p>
 					<form class="mui-input-group">
 					    <div class="mui-input-row">
-					        <input type="text" class="mui-input-clear yzwtPhone" placeholder="请输入手机号" onchange="checknull()">
+					        <input type="text" class="mui-input-clear yzwtPhone" maxlength="11"  onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')" placeholder="请输入手机号" onchange="checknull()">
 					    </div>
 					    <div class="mui-input-row">
 					        <input type="text" class="mui-input-clear yazmcode" placeholder="请输入验证码" onchange="checknull()">
