--- a/jxfyList.html
+++ b/jxfyList.html
@@ -150,6 +150,7 @@
 			var price_dj = '';
 			var chqxz = '';
 			var jiangejt = "D";
+			var search = '';
 			/**
 			 * 下拉刷新具体业务实现
 			 */
@@ -157,7 +158,7 @@
 				setTimeout(function() {
 					xial = 1;
 					$('.listUl').html('');
-					dthqdata(area,price_dj,chqxz,jiangejt);
+					dthqdata(area,price_dj,chqxz,jiangejt,search);
 					var table = document.body.querySelector('.mui-table-view');
 					var cells = document.body.querySelectorAll('.mui-table-view-cell');
 					//这块是下拉刷新添加数据
@@ -178,7 +179,7 @@
 			
 			function pullupRefresh() {
 				setTimeout(function() {
-					dthqdata(area,price_dj,chqxz,jiangejt);
+					dthqdata(area,price_dj,chqxz,jiangejt,search);
 					var table = document.body.querySelector('.mui-table-view');
 					var cells = document.body.querySelectorAll('.mui-table-view-cell');
 					/*for (var i = cells.length, len = i + 20; i < len; i++) {
@@ -310,7 +311,7 @@
 				xial = 1;
 				jiangejt = 'D';
 				$('.listUl').html('');
-				dthqdata(area,price_dj,chqxz,jiangejt);
+				dthqdata(area,price_dj,chqxz,jiangejt,search);
 			});
 			//重置事件
 			$('.czsyhk').click(function(){
@@ -320,7 +321,7 @@
 				qcqitades();
 				chushishij();
 				$('.listUl').html('');
-				dthqdata(area,price_dj,chqxz,jiangejt);
+				dthqdata(area,price_dj,chqxz,jiangejt,search);
 			});
 			
 			//筛选的重置条件
@@ -409,17 +410,19 @@
 			
 			
 	/*		动态数据*/
-			function dthqdata(area,price_dj,chqxz,jiagesanshu){
+			function dthqdata(area,price_dj,chqxz,jiagesanshu,search){
 				console.log(area);
 				console.log(price_dj);
 				console.log(chqxz);
 				console.log(jiagesanshu);
+				console.log(search);
+				alert(123456);
 				console.log(xial);
 				mui.ajax(Interface_url+'/yhcms/web/lpjbxx/getWxLbFyxx1.do',{
 				data:{
 					"parameters":
 						{
-							"search_keywork":"",
+							"search_keywork":search,
 							"district":"",
 							"business":"",
 							"district1":"",
@@ -441,6 +444,7 @@
 				success:function(data){
 					//服务器返回响应，根据响应结果，分析是否登录成功；
 					if(data.success){
+						alert(123);
 						$(".zhezhaoceshx").addClass("zhezhaocdisplayshx");
 						$(".zhezhaoceshx").removeClass("zhezhaocdisbaloshx");
 						mui('#pullrefresh').pullRefresh().setStopped(false);
@@ -726,10 +730,10 @@
 				qcqitades();
 				if(idx == 5){
 					jiangejt = 'P1';
-					dthqdata(area,price_dj,chqxz,jiangejt);
+					dthqdata(area,price_dj,chqxz,jiangejt,search);
 				}else{
 					jiangejt = 'P2';
-					dthqdata(area,price_dj,chqxz,jiangejt);
+					dthqdata(area,price_dj,chqxz,jiangejt,search);
 				}
 			});
 			
@@ -745,13 +749,22 @@
 				qcqitades();
 				if(idx == 7){
 					jiangejt = 'A1';
-					dthqdata(area,price_dj,chqxz,jiangejt);
+					dthqdata(area,price_dj,chqxz,jiangejt,search);
 				}else{
 					jiangejt = 'A2';
-					dthqdata(area,price_dj,chqxz,jiangejt);
+					dthqdata(area,price_dj,chqxz,jiangejt,search);
 				}
 			});
 			
+			//监听搜索页面的返回事件
+			window.addEventListener("sousuochuac", function (e) {
+			    //获得事件参数
+			    var lpname = e.detail.lpname;
+				search = lpname;
+				$('.listUl').html('');
+				xial = 1;
+				dthqdata(area,price_dj,chqxz,jiangejt,search);
+			});
 			/*function jiangefangfa(jiagesanshu){
 				$('.listUl').html('');
 				mui.ajax(Interface_url+'/yhcms/web/lpjbxx/getWxLbFyxx1.do',{
