--- a/sy.html
+++ b/sy.html
@@ -24,42 +24,49 @@
 			    <!-- 额外增加的一个节点(循环轮播：第一个节点是最后一张轮播)11 -->
 			    <div class="mui-slider-item mui-slider-item-duplicate">
 			      <a href="#">
-			        <img src="img/2.png">
+			        <img src="http://47.92.145.21:81/yskjapp/indeximg/banner/banner5.png">
 			      </a>
 			    </div>
 			    <!-- 第一张 -->
 			    <div class="mui-slider-item">
 			      <a href="#">
-			        <img src="img/2.png">
+			        <img src="http://47.92.145.21:81/yskjapp/indeximg/banner/banner1.png">
 			      </a>
 			    </div>
 			    <!-- 第二张 -->
 			    <div class="mui-slider-item">
 			      <a href="#">
-			        <img src="img/2.png">
+			        <img src="http://47.92.145.21:81/yskjapp/indeximg/banner/banner2.png">
 			      </a>
 			    </div>
 			    <!-- 第三张 -->
 			    <div class="mui-slider-item">
 			      <a href="#">
-			        <img src="img/2.png">
+			        <img src="http://47.92.145.21:81/yskjapp/indeximg/banner/banner3.png">
 			      </a>
 			    </div>
 			    <!-- 第四张 -->
 			    <div class="mui-slider-item">
 			      <a href="#">
-			        <img src="img/2.png">
+			        <img src="http://47.92.145.21:81/yskjapp/indeximg/banner/banner4.png">
+			      </a>
+			    </div>
+			    <!-- 第五张 -->
+			    <div class="mui-slider-item">
+			      <a href="#">
+			        <img src="http://47.92.145.21:81/yskjapp/indeximg/banner/banner5.png">
 			      </a>
 			    </div>
 			    <!-- 额外增加的一个节点(循环轮播：最后一个节点是第一张轮播) -->
 			    <div class="mui-slider-item mui-slider-item-duplicate">
 			      <a href="#">
-			        <img src="img/2.png">
+			        <img src="http://47.92.145.21:81/yskjapp/indeximg/banner/banner1.png">
 			      </a>
 			    </div>
 			  </div>
 			  <!--<div class="mui-slider-indicator">
 			    <div class="mui-indicator mui-active"></div>
+			    <div class="mui-indicator"></div>
 			    <div class="mui-indicator"></div>
 			    <div class="mui-indicator"></div>
 			    <div class="mui-indicator"></div>
