--- a/sy.html
+++ b/sy.html
@@ -311,48 +311,30 @@
 						var data = data.data;
 						var string = '';
 						for(var i=0;i<data.length;i++){
-							string = '<li><img src="http://47.92.145.21:81/'+data[i].pic+'" alt="" /><p class="fy_title">'+data[i].topic+'</p></li>';
+							string = '<li onclick="lpdetail('+data[i].id+')"><img src="http://47.92.145.21:81/'+data[i].pic+'" alt="" /><p class="fy_title">'+data[i].topic+'</p></li>';
 							/*document.querySelector('.fypics').innerHTML=string;*/
 							$('.fypics').append(string);
 						}
 						//热门楼盘
-					for (var a=0; a<$('.fypics li').length; a++) {
-						(function(idx){
-							$('.fypics li').eq(a).click(function(){
-								mui.openWindow({ 
-									url:'page/loupan_detail.html', //需要打开页面的url地址 
-									id:'loupan_detail',  //需要打开页面的url页面id
-									styles:{ 
-										top:'0px',//新页面顶部位置 
-										bottom:'0px',//新页面底部位置 
-					//					width:newpage-width,//新页面宽度，默认为100% 
-					//					height:newpage-height,//新页面高度，默认为100% ...... 
-									}, 
-									extras:{ 
-					//					.....//自定义扩展参数，可以用来处理页面间传值 
-									},show:{ //控制打开页面的类型
-										autoShow:true,
-					//					//页面loaded事件发生后自动显示，默认为true 
-										aniShow:'slide-in-right',//页面显示动画，默认为”slide-in-right“；  页面出现的方式 左右上下
-										duration:'300'//页面动画持续时间，Android平台默认100毫秒，iOS平台默认200毫秒； 
-									}, waiting:{ // 控制 弹出转圈框的信息
-										autoShow:true,//自动显示等待框，默认为true 
-										title:'加载中...',//等待对话框上显示的提示内容 
-										options:{ 
-											width:'100px',//等待框背景区域宽度，默认根据内容自动计算合适宽度 
-											height:'100px',//等待框背景区域高度，默认根据内容自动计算合适高度 ...... 
-										} 
-									}
-								});
-								mui.plusReady(function(){
-									var main = plus.webview.getWebviewById('loupan_detail');
-									mui.fire(main, "loppan_id",{
-									    lp_id:data[idx].id
-									})									
-								});
-							})
-						})(a)
-					}
+//					for (var a=0; a<$('.fypics li').length; a++) {
+//						(function(idx){
+//							$('.fypics li').eq(a).click(function(){
+//								alert(data[idx].id);
+////								
+//								mui.openWindow({ 
+//									url:'page/loupan_detail.html', //需要打开页面的url地址 
+//									id:'loupan_detail'  //需要打开页面的url页面id
+//								});
+////								mui.plusReady(function(){
+//									var main = plus.webview.getWebviewById('loupan_detail');
+//									mui.fire(main, "loppan_id",{
+//									    lp_id:data[idx].id
+//									})								
+////								});
+//								
+//							})
+//						})(a)
+//					}
 					}else{
 						mui.alert(data.msg);
 					}
@@ -362,6 +344,25 @@
 					console.log(type);
 				}
 			});
+			
+			function lpdetail(id){
+				alert(id);
+				mui.openWindow({ 
+					url:'page/loupan_detail.html', //需要打开页面的url地址 
+					id:'loupan_detail',  //需要打开页面的url页面id
+					extras:{
+				      lpid:id
+				    },
+				});
+				mui.plusReady(function(){
+					var main2 = plus.webview.getWebviewById('loupan_detail');
+					mui.fire(main2, "loppan_id",{
+					    lp_id:id
+					})								
+				});
+				
+			}
+			
 			
 /*			特价房源*/
 			mui.ajax(url+'/yhcms/web/jcsj/getSpecialHouse.do',{
