--- a/jxfyList.html
+++ b/jxfyList.html
@@ -749,7 +749,8 @@
 						} 
 					}
 				});
-
+				alert(11111);
+				alert(this.id);
 				var main = plus.webview.getWebviewById('fyTail');
 				mui.fire(main, "fyyuadeqx",{
 				    fyid:this.id
