--- a/wd.html
+++ b/wd.html
@@ -103,7 +103,7 @@
 			    }
 			    takeuser();
 //			    alert(param);
-			    // 执行相应的ajax或者操作DOM等操作
+			    // 执行相应的ajax或者操作DOM等操作凄凄切切
 			});
 			//跳转页面地址
 			var toUrl = ['page/person.html','page/mycollection.html','page/myset.html'];
