--- a/fwsc.html
+++ b/fwsc.html
@@ -48,7 +48,7 @@
 			</div>
 			<div class="zxsj_box" style="padding-bottom: 0.533333rem;">
 				<div class="tit">热门推荐</div>
-				<div class="rmtj_pic yiny">
+				<div class="rmtj_pic yiny" id="gssw">
 					<img src="http://116.62.68.26/yskjapp\servicemall\recommend\hotservice1.png"/>
 				</div>
 				<div class="rmtj_pic yiny">
