--- a/jxfy.html
+++ b/jxfy.html
@@ -274,6 +274,15 @@
 			    var qvx = e.detail.qvx;
 				$('.sousuwenzi').html('请输入楼盘关键字搜索');
 			});
+			
+			//位置内容的改变
+			window.addEventListener("weizhineirong", function (e) {
+			    //获得事件参数
+			    var text3 = e.detail.text3;
+				var leng = $('.shuixuanweizhi').text().length;
+				var wez = $('.shuixuanweizhi').html().substring(leng);
+				$('.shuixuanweizhi').html(text3 + wez);
+			});
 		  	
 		</script>
 	</body>
