--- a/fwsc.html
+++ b/fwsc.html
@@ -16,31 +16,31 @@
 	<body>
 		<div class="mui-content fw_main">
 		    <div class="fw_banner">
-		    	<img src="http://116.62.68.26/yskjapp\servicemall\banner\mall_banner.jpg"/>
+		    	<img src="http://47.92.145.21:81/yskjapp/servicemall/banner/mall_banner.jpg"/>
 		    </div> 
 			<div class="fw_box">
 				<ul class="fw">
 					<li>
 						<p class="fw_ion">
-							<img src="http://116.62.68.26/yskjapp\servicemall\fourservices\mall_register.png" alt="" />
+							<img src="http://47.92.145.21:81/yskjapp\servicemall\fourservices\mall_register.png" alt="" />
 						</p>
 						<p class="fw_name">工商税务</p>
 					</li>
 					<li>
 						<p class="fw_ion">
-							<img src="http://116.62.68.26/yskjapp\servicemall\fourservices\mall_renovation.png" alt="" />
+							<img src="http://47.92.145.21:81/yskjapp\servicemall\fourservices\mall_renovation.png" alt="" />
 						</p>
 						<p class="fw_name">装修定制</p>
 					</li>
 					<li>
 						<p class="fw_ion">
-							<img src="http://116.62.68.26/yskjapp\servicemall\fourservices\mall_finance.png" alt="" />
+							<img src="http://47.92.145.21:81/yskjapp\servicemall\fourservices\mall_finance.png" alt="" />
 						</p>
 						<p class="fw_name">金融服务</p>
 					</li>
 					<li>
 						<p class="fw_ion">
-							<img src="http://116.62.68.26/yskjapp\servicemall\fourservices\mall_addservice.png" alt="" />
+							<img src="http://47.92.145.21:81/yskjapp\servicemall\fourservices\mall_addservice.png" alt="" />
 						</p>
 						<p class="fw_name">增值服务</p>
 					</li>
@@ -49,13 +49,13 @@
 			<div class="zxsj_box" style="padding-bottom: 0.533333rem;">
 				<div class="tit">热门推荐</div>
 				<div class="rmtj_pic yiny" id="gssw">
-					<img src="http://116.62.68.26/yskjapp\servicemall\recommend\hotservice1.png"/>
+					<img src="http://47.92.145.21:81/yskjapp\servicemall\recommend\hotservice1.png"/>
 				</div>
 				<div class="rmtj_pic yiny" id="zxdz">
-					<img src="http://116.62.68.26/yskjapp\servicemall\recommend\hotservice2.png"/>
+					<img src="http://47.92.145.21:81/yskjapp\servicemall\recommend\hotservice2.png"/>
 				</div>
 				<div class="rmtj_pic yiny" style="margin-top: 0.533333rem;" id="jrfw">
-					<img src="http://116.62.68.26/yskjapp\servicemall\recommend\hotservice3.png"/>
+					<img src="http://47.92.145.21:81/yskjapp\servicemall\recommend\hotservice3.png"/>
 				</div>
 			</div>
 			<div class="zxsj_box" style="padding-bottom: 1rem;">
@@ -63,19 +63,19 @@
 				<ul class="whysel">
 					<li>
 						<!--<p class="sel_ion">-->
-							<img src="http://116.62.68.26/yskjapp\servicemall\advantage\service.png" alt="" />
+							<img src="http://47.92.145.21:81/yskjapp\servicemall\advantage\service.png" alt="" />
 						<!--</p>-->
 						<!--<p class="sel_name">1+N专属服务</p>-->
 					</li>
 					<li>
 						<!--<p class="sel_ion">-->
-							<img src="http://116.62.68.26/yskjapp\servicemall\advantage\information.png" alt="" />
+							<img src="http://47.92.145.21:81/yskjapp\servicemall\advantage\information.png" alt="" />
 						<!--</p>-->
 						<!--<p class="sel_name">信息安全</p>-->
 					</li>
 					<li>
 						<!--<p class="sel_ion">-->
-							<img src="http://116.62.68.26/yskjapp\servicemall\advantage\convenient.png" alt="" />
+							<img src="http://47.92.145.21:81/yskjapp\servicemall\advantage\convenient.png" alt="" />
 						<!--</p>-->
 						<!--<p class="sel_name">高效便捷</p>-->
 					</li>
