--- a/sy.html
+++ b/sy.html
@@ -14,9 +14,9 @@
 		<link rel="stylesheet" type="text/css" href="css/sy.css"/>
 	</head>
 	<body>
-		<!--<header class="mui-bar mui-bar-transparent bg-color-bg">
-		    <h1 class="mui-title">首页</h1>
-		</header>-->
+		<header class="mui-bar mui-bar-transparent bg-color-bg" style="height: 20px;">
+		    <h1 class="mui-title"></h1>
+		</header>
 		<div class="mui-content">
 		    <!--轮播-->
 			<div id="slider" class="mui-slider" >
@@ -225,7 +225,7 @@
 			</div>
 		</div>
 		<script type="text/javascript" src="js/lib/castapp.js" ></script>
-		<script type="text/javascript">
+		<script type="text/javascript">	
 			ca.init();
 			castapp.pictureScroll({
 			    callback:function(pictureNumber){
