--- a/wd.html
+++ b/wd.html
@@ -22,7 +22,7 @@
 		    	<p class="user_news" id="login">
 					<span class="ljdl">立即登录</span>
 					<span class="dlcz">登录后可进行更多操作</span>
-					<span class="wrz" style="display: none;">未认证</span>
+					<span class="wrz" style="display: none;">未认证 <span class="jt">＞</span></span> 
 					<span class="yrz" style="display: none;">已认证</span>
 					<span class="sh" style="display: none;">认证审核中</span>
 		    	</p>
