--- a/sy.html
+++ b/sy.html
@@ -13,6 +13,9 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<link rel="stylesheet" type="text/css" href="css/sy.css"/>
 	</head>
+	<style type="text/css">
+		.mui-input-row:nth-child(2) .mui-input-clear~.mui-icon-clear{right: 25%!important;}
+	</style>
 	<body>
 		<header class="mui-bar mui-bar-transparent bg-color-bg" style="height: 20px;">
 		    <h1 class="mui-title"></h1>
@@ -121,7 +124,6 @@
 				</p>
 				<ul class="tt_news">
 					
-					
 				</ul>
 			</div>
 			<!--Tab切换-->
@@ -149,7 +151,7 @@
 					        <input type="text" class="mui-input-clear yzwtPhone" maxlength="11"  onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')" placeholder="请输入手机号"  >
 					    </div>
 					    <div class="mui-input-row">
-					        <input type="text" class="mui-input-clear yazmcode" placeholder="请输入验证码"  > 
+					        <input type="text" style="width: 60%;"  class="mui-input-clear yazmcode" placeholder="请输入验证码"  > 
 					    </div>
 					    <div class="btn_box">
 					    	<div class="hqyzm" onclick="huoqvyanzm()">获取验证码</div>
