--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<link rel="stylesheet" type="text/css" href="css/iconfont.css"/>
 </head>
+<style type="text/css">
+	.mui-bar-tab .mui-tab-item.mui-active{color: #2b70d8;}
+</style>
 <body>
 	<nav class="mui-bar mui-bar-tab">
 	    <a id="defaultTab" class="mui-tab-item mui-active" href="sy.html">
