--- a/jxfyList.html
+++ b/jxfyList.html
@@ -193,7 +193,6 @@
 			
 			function pullupRefresh() {
 				setTimeout(function() {
-					alert(111111);
 					dthqdata(district,fdcode,lineid,station,area,price_dj,chqxz,jiangejt,search);
 					var table = document.body.querySelector('.mui-table-view');
 					var cells = document.body.querySelectorAll('.mui-table-view-cell');
@@ -581,8 +580,6 @@
 								/*document.querySelector('.fypics').innerHTML=string;*/
 								$('.listUl').append(string);
 							}
-							alert(data.length);
-							alert(xial);
 							mui('#pullrefresh').pullRefresh().endPullupToRefresh((data.length < 10)); //参数为true代表没有更多数据了。
 						}
 						
@@ -886,6 +883,8 @@
 				search = '';
 				xial = 1;
 				$('.listUl').html('');
+				mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //refresh completed
+			 	mui('#pullrefresh').pullRefresh().refresh(true);
 				dthqdata(district,fdcode,lineid,station,area,price_dj,chqxz,jiangejt,search);
 			});
 			/*function jiangefangfa(jiagesanshu){
