--- a/jxfy.html
+++ b/jxfy.html
@@ -41,7 +41,7 @@
 			      id:'jxfyList',//子页面标志
 			      styles:{
 			        top:'110px',//子页面顶部位置
-			        bottom:'110px',//子页面底部位置
+			        bottom:'0px',//子页面底部位置
 			        /*width:subpage-width,//子页面宽度，默认为100%
 			        height:subpage-height,//子页面高度，默认为100%
 			        ......*/
@@ -55,6 +55,17 @@
 				swipeBack:true //启用右滑关闭功能
 			});
 		  	$('.sousu').click(function(){
+		  		//精选房源上面搜索框的值传到搜索页面
+				var jxfsszhi = '';
+				if($('.sousuwenzi').html() == '请输入楼盘关键字搜索'){
+					jxfsszhi = '';
+				}else{
+					jxfsszhi = $('.sousuwenzi').html();
+					var main = plus.webview.getWebviewById('search');
+					mui.fire(main,"jxfychudezhiwed",{
+					    lpname:jxfsszhi
+					})
+				}
 				mui.openWindow({ 
 					url:'page/search.html', //需要打开页面的url地址 
 					id:'search',  //需要打开页面的url页面id
@@ -65,8 +76,7 @@
 	//					height:newpage-height,//新页面高度，默认为100% ...... 
 					}, 
 					extras:{ 
-						name:'aries',
-						age:'18',
+						lpname:jxfsszhi,
 	//					.....//自定义扩展参数，可以用来处理页面间传值 
 					},show:{ //控制打开页面的类型
 						autoShow:true,
@@ -82,17 +92,7 @@
 						} 
 					}
 				});
-				//精选房源上面搜索框的值传到搜索页面
-				var jxfsszhi = '';
-				if($('.sousuwenzi').html() == '请输入楼盘关键字搜索'){
-					jxfsszhi = '';
-				}else{
-					jxfsszhi = $('.sousuwenzi').html();
-					var main = plus.webview.getWebviewById('search');
-					mui.fire(main,"jxfychudezhiwed",{
-					    lpname:jxfsszhi
-					})
-				}
+				
 				
 			});
 
