--- a/wd.html
+++ b/wd.html
@@ -55,6 +55,9 @@
 		    <p class="wd_tip">如有任何疑问请拨打咨询电话</p>
 		    <p class="wd_tel"><a href="tel:400-078-8800">400-078-8800</a></p>
 		</div>
+		 <div class="sy_kfion">
+				<p><a href="tel:400-078-8800"></a></p>
+			</div>
 		<script type="text/javascript" src="js/lib/app_config.js" ></script>
 		<script type="text/javascript">
 			var cookie=JSON.parse(localStorage.getItem('cookxs_yh'));
