--- a/qyhl.html
+++ b/qyhl.html
@@ -5,6 +5,7 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<script type="text/javascript" src="js/lib/jquery-1.10.2.min.js"></script>
 		<script type="text/javascript" src="js/lib/flexible.js"></script>
 		<script type="text/javascript" src="js/lib/flexible_css.js"></script>
@@ -49,6 +50,9 @@
 		    		
 		    	</ul>
 		    </div>
+		    <div class="sy_kfion">
+				<p><a href="tel:400-078-8800"></a></p>
+			</div>
 		    <div class="boottms"></div>
 		</div>
 		 <script src="js/lib/app_config.js"></script>
