--- a/welcome.html
+++ b/welcome.html
@@ -33,7 +33,7 @@
 					<!-- 第三张 -->
 					<div class="mui-slider-item">
 						<div class="btn_box">
-							<button id="dy_enter">立即进入</button>							
+							<button id="dy_enter">立即体验</button>							
 						</div>
 						<img src="img/w3.png">
 					</div>
