--- a/enterprise.html
+++ b/enterprise.html
@@ -12,14 +12,13 @@
 		<link rel="stylesheet" type="text/css" href="../css/loupan_detail.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/jxfyList.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/sy.css"/>
+		<link rel="stylesheet" type="text/css" href="css/style_a_d.css"/>
 	</head>
 		<header class="mui-bar mui-bar-nav fytail">
 		    <div class="">
-		    	<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left fyxqfh"></a>
+		    	<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left fyxqfh a_d"></a>
 		    	<span class="titlezi building_name">企业互联</span>
 		    </div>
-		   
-		    
 		</header>
 		<div class="mui-content fyzhuti" >
 		    <div class="fyxqyi" >
