--- a/jxfyList.html
+++ b/jxfyList.html
@@ -17,6 +17,7 @@
 	</head>
 	<style type="text/css">
 		/*#sel1 li{border: 1px solid red;}*/
+		.xuanxing .xiaokuai,.xuanxing .xiaokzujin,.xuanxing .xiaokchuaq{font-size: 0.346666rem;}
 	</style>
 	<body>
 		<!--遮罩层-->
