2018-03-29 17:43pm 张渊(图片存放本地之前版本)！！！

--- a/fwsc.html
+++ b/fwsc.html
@@ -14,6 +14,9 @@
 		<link rel="stylesheet" type="text/css" href="css/fwsc.css"/>
 	</head>
 	<body>
+		<header class="mui-bar mui-bar-transparent bg-color-bg" style="height: 20px;">
+		    <h1 class="mui-title"></h1>
+		</header>
 		<div class="mui-content fw_main">
 		    <div class="fw_banner">
 		    	<img src="http://47.92.145.21:81/yskjapp/servicemall/banner/mall_banner.jpg"/>
@@ -81,9 +84,9 @@
 					</li>
 				</ul>
 			</div>
-			<div class="sy_kfion">
+			<!--<div class="sy_kfion">
 				<p><a href="tel:400-078-8800"></a></p>
-			</div>
+			</div>-->
 		</div>
 		<script type="text/javascript">
 			mui.init()
