--- a/jxfyList.html
+++ b/jxfyList.html
@@ -128,9 +128,9 @@
 				<!--</ul>-->
 			</div>
 		</div> 
-		<div class="sy_kfion">
+		<!--<div class="sy_kfion">
 			<p><a href="tel:400-078-8800"></a></p>
-		</div>
+		</div>-->
 		
 		<script src="js/lib/app_config.js"></script>
 		<script src="js/mui.min.js"></script>
