--- a/sy.html
+++ b/sy.html
@@ -217,9 +217,9 @@
 				    </ul>
 				</div>
 			</div>
-			<div class="sy_kfion">
+			<!--<div class="sy_kfion">
 				<p><a href="tel:400-078-8800"></a></p>
-			</div>
+			</div>-->
 			<div class="shouhou">
 				<span class="sy_shion"></span>
 				售后服务
