--- a/jxfyList.html
+++ b/jxfyList.html
@@ -415,7 +415,7 @@
 				console.log(jiagesanshu);
 				console.log(search);
 				console.log(xial);
-				mui.ajax(Interface_url+'/yhcms/web/lpjbxx/getWxLbFyxx1.do',{
+				mui.ajax(url+'/yhcms/web/lpjbxx/getWxLbFyxx1.do',{
 				data:{
 					"parameters":
 						{
