--- a/sy.html
+++ b/sy.html
@@ -374,7 +374,7 @@
 			}
 			
 /*			热门楼盘获取的数据*/
-			mui.ajax(url+'/yhcms/web/jcsj/getHotBuilding.do',{
+			mui.ajax(Interface_url+'/yhcms/web/jcsj/getHotBuilding.do',{
 				dataType:'json',//服务器返回json格式数据
 				type:'post',//HTTP请求类型
 				timeout:10000,//超时时间设置为10秒；
@@ -438,7 +438,7 @@
 			
 			
 /*			特价房源*/
-			mui.ajax(url+'/yhcms/web/jcsj/getSpecialHouse.do',{
+			mui.ajax(Interface_url+'/yhcms/web/jcsj/getSpecialHouse.do',{
 				dataType:'json',//服务器返回json格式数据
 				type:'post',//HTTP请求类型
 				timeout:10000,//超时时间设置为10秒；
